# proxpde_app

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mysolver.cpp  run_cmake.bash
spack_env/: spack.yaml
